[gd_scene load_steps=5 format=3 uid="uid://bspaj5uyfhntd"]

[ext_resource type="Texture2D" uid="uid://w8dijrj1temi" path="res://Assets/tools/s_to_move.png" id="1_blsuj"]
[ext_resource type="Script" path="res://Scripts/tool_bar.gd" id="1_sbj0h"]
[ext_resource type="Texture2D" uid="uid://ctros82fg8vnq" path="res://Assets/tools/s_selecting.png" id="2_v7x7a"]
[ext_resource type="Texture2D" uid="uid://c182gbtsb2ll1" path="res://Assets/tools/s_hoe.png" id="3_kk2v0"]

[node name="ToolBar" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1281.0
offset_bottom = 716.0
grow_horizontal = 0
script = ExtResource("1_sbj0h")

[node name="VBoxBar" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 1193.0
offset_top = 6.0
offset_right = 1273.0
offset_bottom = 316.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxBar"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 23
text = "VIEW"
horizontal_alignment = 2

[node name="view" type="Button" parent="VBoxBar"]
layout_mode = 2
text = "view"

[node name="edit" type="Button" parent="VBoxBar"]
layout_mode = 2
text = "edit"

[node name="place" type="Button" parent="VBoxBar"]
layout_mode = 2
text = "place"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 1064.0
offset_top = 6.0
offset_right = 1178.0
offset_bottom = 38.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 23
text = "Selecting"
horizontal_alignment = 2

[node name="Tools" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -195.0
offset_top = 40.0
offset_right = -155.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="view" type="VBoxContainer" parent="Tools"]
layout_mode = 2
offset_right = 89.0
offset_bottom = 180.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="to_move" type="Button" parent="Tools/view"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("1_blsuj")
flat = true

[node name="selecting" type="Button" parent="Tools/view"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("2_v7x7a")
flat = true

[node name="edit" type="HBoxContainer" parent="Tools"]
layout_mode = 2
offset_bottom = 40.0

[node name="place" type="HBoxContainer" parent="Tools"]
layout_mode = 0
offset_right = 89.0
offset_bottom = 88.0

[node name="hoe" type="Button" parent="Tools/place"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("3_kk2v0")
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxBar/view" to="." method="_on_view_pressed"]
[connection signal="pressed" from="VBoxBar/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="VBoxBar/place" to="." method="_on_place_pressed"]
[connection signal="pressed" from="Tools/view/to_move" to="." method="_on_to_move_pressed"]
[connection signal="pressed" from="Tools/view/selecting" to="." method="_on_selecting_pressed"]
[connection signal="pressed" from="Tools/place/hoe" to="." method="_on_hoe_pressed"]
